# Server

./: CMakeLists.txt  CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  GameList.cpp  GameList.h  GameManager.cpp  GameManager.h  HandleClient.cpp  HandleClient.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  README.md  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile
